<resources>
    <string name="app_name">less_110_fragments_dialogfragment</string>
    <string name="dialog_1">Dialog 1</string>
    <string name="dialog_2">Dialog 2</string>
    <string name="title">Title!</string>
    <string name="message_text">Text of your massage</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="maybe">Maybe</string>
</resources>